<resources>
    <string name="app_name">TPO1_MOUILLAC_AMELIE</string>
    <string name="add_button">Add</string>
    <string name="add_result">...</string>
    <string name="number_2">Number 2</string>
    <string name="number_1">Number 1</string>
    <string name="count_button">Count</string>
    <string name="count_result">...</string>
    <string name="toast_button">Toast</string>
    <string name="mail_content">Mail content</string>
    <string name="send_mail_button">Send Mail</string>
    <string name="to_calculs_button">To Calculs</string>
</resources>