<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/toast_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/my_second_color"
        android:gravity="center_vertical"
        android:text="@string/count_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toast"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/count_button"
        app:layout_constraintBottom_toTopOf="@+id/number1_TV" />

    <EditText
        android:id="@+id/number1_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_1"
        android:padding="20dp"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/number2_TV"
        android:autofillHints="" />

    <EditText
        android:id="@+id/number2_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_2"
        android:padding="20dp"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/addition_response_TV"
        android:autofillHints="" />

    <TextView
        android:id="@+id/addition_response_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="50sp"
        android:background="@color/my_second_color"
        android:gravity="center_vertical"
        android:text="@string/add_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/addition_button"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/addition_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>